Unity/im_unity_sdk_plus/Assets/TencentIMSDK/Plugins/Metro/ImSDK_Windows_C_6.1.2155/include/TIMCloudCallback.h


typedef void (*TIMRecvNewMsgCallback)(const char* json_msg_array, const void* user_data);
typedef void (*TIMMsgReadedReceiptCallback)(const char* json_msg_readed_receipt_array, const void* user_data);
typedef void (*TIMMsgRevokeCallback)(const char* json_msg_locator_array, const void* user_data);
typedef void (*TIMMsgElemUploadProgressCallback)(const char* json_msg, uint32_t index, uint32_t cur_size, uint32_t total_size, const void* user_data);
typedef void (*TIMGroupTipsEventCallback)(const char* json_group_tip, const void* user_data);
typedef void (*TIMGroupAttributeChangedCallback)(const char *group_id, const char* json_group_attibute_array, const void* user_data);
typedef void (*TIMConvEventCallback)(enum TIMConvEvent conv_event, const char* json_conv_array, const void* user_data);
typedef void (*TIMConvTotalUnreadMessageCountChangedCallback)(int total_unread_count, const void* user_data);
typedef void (*TIMNetworkStatusListenerCallback)(enum TIMNetworkStatus status, int32_t code, const char* desc, const void* user_data);
typedef void (*TIMKickedOfflineCallback)(const void* user_data);
typedef void (*TIMUserSigExpiredCallback)(const void* user_data);
typedef void(*TIMOnAddFriendCallback)(const char* json_identifier_array, const void* user_data);
typedef void(*TIMOnDeleteFriendCallback)(const char* json_identifier_array, const void* user_data);
typedef void(*TIMUpdateFriendProfileCallback)(const char* json_friend_profile_update_array, const void* user_data);
typedef void(*TIMFriendAddRequestCallback)(const char* json_friend_add_request_pendency_array, const void* user_data);
typedef void(*TIMFriendApplicationListDeletedCallback)(const char* json_identifier_array, const void* user_data);
typedef void(*TIMFriendApplicationListReadCallback)(const void* user_data);
typedef void(*TIMFriendBlackListAddedCallback)(const char* json_friend_black_added_array, const void* user_data);
typedef void(*TIMFriendBlackListDeletedCallback)(const char* json_identifier_array, const void* user_data);
typedef void (*TIMLogCallback)(enum TIMLogLevel level, const char* log, const void* user_data);
typedef void (*TIMMsgUpdateCallback)(const char* json_msg_array, const void* user_data);