Unity/im_unity_sdk_plus/Assets/TencentIMSDK/Native/NativeSDK.cs


        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int TIMGroupSearchGroupMembers(IntPtr json_group_search_group_members_param, CommonValueCallback cb, IntPtr user_data);
        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int TIMGroupInitGroupAttributes(IntPtr group_id, IntPtr json_group_atrributes, CommonValueCallback cb, IntPtr user_data);
        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int TIMGroupDeleteGroupAttributes(IntPtr group_id, IntPtr json_keys, CommonValueCallback cb, IntPtr user_data);
        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int TIMGroupGetGroupAttributes(IntPtr group_id, IntPtr json_keys, CommonValueCallback cb, IntPtr user_data);
        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]


        public static extern int TIMProfileGetUserProfileList(IntPtr json_get_user_profile_list_param, CommonValueCallback cb, IntPtr user_data);
        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int TIMProfileModifySelfUserProfile(IntPtr json_modify_self_user_profile_param, CommonValueCallback cb, IntPtr user_data);

        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int TIMFriendshipGetFriendProfileList(CommonValueCallback cb, IntPtr user_data);
        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int TIMFriendshipAddFriend(IntPtr json_add_friend_param, CommonValueCallback cb, IntPtr user_data);

        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int TIMFriendshipHandleFriendAddRequest(IntPtr json_handle_friend_add_param, CommonValueCallback cb, IntPtr user_data);

        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int TIMFriendshipModifyFriendProfile(IntPtr json_modify_friend_info_param, CommonValueCallback cb, IntPtr user_data);

        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int TIMFriendshipDeleteFriend(IntPtr json_delete_friend_param, CommonValueCallback cb, IntPtr user_data);

        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int TIMFriendshipCheckFriendType(IntPtr json_check_friend_list_param, CommonValueCallback cb, IntPtr user_data);

        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int TIMFriendshipCreateFriendGroup(IntPtr json_create_friend_group_param, CommonValueCallback cb, IntPtr user_data);

        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int TIMFriendshipGetFriendGroupList(IntPtr json_get_friend_group_list_param, CommonValueCallback cb, IntPtr user_data);

        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int TIMFriendshipModifyFriendGroup(IntPtr json_modify_friend_group_param, CommonValueCallback cb, IntPtr user_data);

        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int TIMFriendshipDeleteFriendGroup(IntPtr json_delete_friend_group_param, CommonValueCallback cb, IntPtr user_data);

        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int TIMFriendshipAddToBlackList(IntPtr json_add_to_blacklist_param, CommonValueCallback cb, IntPtr user_data);


        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int TIMFriendshipGetBlackList(CommonValueCallback cb, IntPtr user_data);

        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int TIMFriendshipDeleteFromBlackList(IntPtr json_delete_from_blacklist_param, CommonValueCallback cb, IntPtr user_data);

        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int TIMFriendshipGetPendencyList(IntPtr json_get_pendency_list_param, CommonValueCallback cb, IntPtr user_data);

        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int TIMFriendshipDeletePendency(IntPtr json_delete_pendency_param, CommonValueCallback cb, IntPtr user_data);

        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int TIMFriendshipReportPendencyReaded(long time_stamp, CommonValueCallback cb, IntPtr user_data);

        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int TIMFriendshipSearchFriends(IntPtr json_search_friends_param, CommonValueCallback cb, IntPtr user_data);

        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int TIMFriendshipGetFriendsInfo(IntPtr json_get_friends_info_param, CommonValueCallback cb, IntPtr user_data);

        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int callExperimentalAPI(IntPtr json_param, CommonValueCallback cb, IntPtr user_data);

        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void TIMAddRecvNewMsgCallback(TIMRecvNewMsgCallback cb, IntPtr user_data);



        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void TIMRemoveRecvNewMsgCallback(TIMRecvNewMsgCallback cb);


        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void TIMSetMsgReadedReceiptCallback(TIMMsgReadedReceiptCallback cb, IntPtr user_data);

        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void TIMSetMsgRevokeCallback(TIMMsgRevokeCallback cb, IntPtr user_data);

        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void TIMSetMsgElemUploadProgressCallback(TIMMsgElemUploadProgressCallback cb, IntPtr user_data);

        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void TIMSetGroupTipsEventCallback(TIMGroupTipsEventCallback cb, IntPtr user_data);
        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void TIMSetGroupAttributeChangedCallback(TIMGroupAttributeChangedCallback cb, IntPtr user_data);

        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void TIMSetConvEventCallback(TIMConvEventCallback cb, IntPtr user_data);

        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void TIMSetConvTotalUnreadMessageCountChangedCallback(TIMConvTotalUnreadMessageCountChangedCallback cb, IntPtr user_data);

        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void TIMSetNetworkStatusListenerCallback(TIMNetworkStatusListenerCallback cb, IntPtr user_data);

        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void TIMSetKickedOfflineCallback(TIMKickedOfflineCallback cb, IntPtr user_data);

        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void TIMSetUserSigExpiredCallback(TIMUserSigExpiredCallback cb, IntPtr user_data);

        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void TIMSetOnAddFriendCallback(TIMOnAddFriendCallback cb, IntPtr user_data);

        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void TIMSetOnDeleteFriendCallback(TIMOnDeleteFriendCallback cb, IntPtr user_data);

        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void TIMSetUpdateFriendProfileCallback(TIMUpdateFriendProfileCallback cb, IntPtr user_data);

        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void TIMSetFriendAddRequestCallback(TIMFriendAddRequestCallback cb, IntPtr user_data);

        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void TIMSetFriendApplicationListDeletedCallback(TIMFriendApplicationListDeletedCallback cb, IntPtr user_data);

        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void TIMSetFriendApplicationListReadCallback(TIMFriendApplicationListReadCallback cb, IntPtr user_data);

        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void TIMSetFriendBlackListAddedCallback(TIMFriendBlackListAddedCallback cb, IntPtr user_data);

        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void TIMSetFriendBlackListDeletedCallback(TIMFriendBlackListDeletedCallback cb, IntPtr user_data);

        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void TIMSetLogCallback(TIMLogCallback cb, IntPtr user_data);

        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void TIMSetMsgUpdateCallback(TIMMsgUpdateCallback cb, IntPtr user_data);







        [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
        public delegate void CommonValueCallback(int code, IntPtr desc, IntPtr json_param, IntPtr user_data);

        [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
        public delegate void TIMRecvNewMsgCallback(IntPtr json_msg_array, IntPtr user_data);

        [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
        public delegate void TIMMsgReadedReceiptCallback(IntPtr json_msg_readed_receipt_array, IntPtr user_data);

        [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
        public delegate void TIMMsgRevokeCallback(IntPtr json_msg_locator_array, IntPtr user_data);

        [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
        public delegate void TIMMsgElemUploadProgressCallback(IntPtr json_msg, int index, int cur_size, int total_size, IntPtr user_data);

        [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
        public delegate void TIMGroupTipsEventCallback(IntPtr json_group_tip_array, IntPtr user_data);

        [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
        public delegate void TIMGroupAttributeChangedCallback(IntPtr group_id, IntPtr json_group_attibute_array, IntPtr user_data);

        [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
        public delegate void TIMConvEventCallback(int conv_event, IntPtr json_conv_array, IntPtr user_data);

        [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
        public delegate void TIMConvTotalUnreadMessageCountChangedCallback(int total_unread_count, IntPtr user_data);
        [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
        public delegate void TIMNetworkStatusListenerCallback(int status, int code, IntPtr desc, IntPtr user_data);

        [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
        public delegate void TIMKickedOfflineCallback(IntPtr user_data);

        [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
        public delegate void TIMUserSigExpiredCallback(IntPtr user_data);

        [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
        public delegate void TIMOnAddFriendCallback(IntPtr json_identifier_array, IntPtr user_data);

        [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
        public delegate void TIMOnDeleteFriendCallback(IntPtr json_identifier_array, IntPtr user_data);
